[package]
name = "common-system-table"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
api.workspace = true
catalog.workspace = true
common-catalog.workspace = true
common-error.workspace = true
common-macro.workspace = true
common-query.workspace = true
operator.workspace = true
session.workspace = true
snafu.workspace = true
table.workspace = true

[lints]
workspace = true
